--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.4.0",
     "expo": "~36.0.0",
     "firebase": "^7.24.0",
     "react": "~16.9.0",
